tests/NormalTests/paczka1/small_fuzzy/91347671.err
Error in line 2: lWucm S850 72,5
Error in line 1: A566 A999 0,7
